--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.3.0",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
